--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,25 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="passwordHint">Password</string>
+    <string name="phoneHint">Phone</string>
+    <string name="nameHint">Name</string>
+    <string name="emailHint">Email</string>
+
+    <string name="orderNumber">#111111</string>
+    <string name="orderStatus">Status</string>
+
+    <string name="cartTotal">Total:</string>
+
+    <string name="phoneDigits">1234567890</string>
+    <string name="address">Address</string>
+    <string name="name">John Smith</string>
+
+    <string name="menu">Name of Menu</string>
+    <string name="food">Name of Food</string>
+    <string name="price">100,000</string>
+    <string name="description">Description</string>
+
+
 </resources>
