--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="passwordHint">Password</string>
-    <string name="phoneHint">Phone</string>
+    <string name="phoneHint">Phone - Digits Only</string>
     <string name="nameHint">Name</string>
     <string name="emailHint">Email</string>
 
